k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kaps-mysql
  namespace: kaps-ai
spec:
  selector:
    app: kaps-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  clusterIP: None
